カメラの切り替えを作成

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,8 @@ Assets/_DefaultAsset/
 Assets/Plugins/UniRx.meta
 Assets/Plugins/
 Assets/_UnityStoreAsset/
+Recordings/movie_012.mp4
+Recordings/movie_013.mp4
+Recordings/movie_014.mp4
+Recordings/movie_015.mp4
+Recordings/movie_016.mp4
